--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
 										<img src="static\dist/images/feature-icon-01.svg" alt="Feature 01">
                                     </div>
     <script src="static\dist/js/main.min.js"></script>
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
