--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Solid Template</title>
+    <title>IB Mentoring</title>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="static\dist/css/style.css">
 	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
@@ -31,7 +31,7 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">St.Cats School IB tutoring program</h1>
+	                        <h1 class="hero-title mt-0">St.Cats School IB Mentoring program</h1>
 	                        <p class="hero-paragraph">Looking for extra help or keen to offer your support? Our Peer Tutoring Program connects students needing assistance in a school subject with IB student tutors ready to help. Simply fill out the form, and we’ll match you based on your subject and availability. IB students can also join as tutors as part of their CAS Creativity & Service. For questions, contact peertutoring@stcatherines.gr</p>
 	                        <div class="hero-cta"><a class="button button-primary" href="https://forms.office.com/e/rfmhcAfcig">Get Tutored</a><a class="button" href="https://forms.office.com/e/KyKWMStTRH">Tutor</a></div>
 						</div>
