--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0">St.Cats School IB Mentoring program</h1>
-	                        <p class="hero-paragraph">Looking for extra help or keen to offer your support? Our Peer Tutoring Program connects students needing assistance in a school subject with IB student tutors ready to help. Simply fill out the form, and we’ll match you based on your subject and availability. IB students can also join as tutors as part of their CAS Creativity & Service. For questions, contact peertutoring@stcatherines.gr</p>
+	                        <p class="hero-paragraph">Looking for extra support in your studies or eager to excel beyond the curriculum? Our IB Mentoring Program connects students seeking guidance in school subjects with experienced IB mentors. Whether you need assistance or want to push your understanding further, we’ll pair you with a mentor who matches your needs and schedule.For questions, contact peertutoring@stcatherines.gr.</p>
 	                        <div class="hero-cta"><a class="button button-primary" href="https://forms.office.com/e/rfmhcAfcig">Get Tutored</a><a class="button" href="https://forms.office.com/e/KyKWMStTRH">Tutor</a></div>
 						</div>
 						<div class="hero-figure anime-element">
